--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -40,6 +40,7 @@
 
     <!--Root-->
     <host:SubPageFrame
+        x:Uid="IdeResults/Frame"
         Title="RUN"
         Background="#72000000">
 
