--- a/src/Brainf_ckSharp/Memory/TuringMachineState.ExecutionContext.tt
+++ b/src/Brainf_ckSharp/Memory/TuringMachineState.ExecutionContext.tt
@@ -104,62 +104,68 @@ foreach (var mode in (OverflowMode[])Enum.GetValues(typeof(OverflowMode)))
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
             public bool TryMoveNext()
             {
-                if (_Position == MaxIndex) return false;
+                if (_Position != MaxIndex)
+                {
+                    _Position++;
 
-                _Position++;
+                    return true;
+                }
 
-                return true;
+                return false;
             }
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
             public bool TryMoveNext(int count, ref int totalOperations)
             {
-                if (_Position + count > MaxIndex)
+                if (_Position + count <= MaxIndex)
                 {
-                    totalOperations += MaxIndex - _Position;
+                    totalOperations += count;
 
-                    _Position = MaxIndex;
+                    _Position += count;
 
-                    return false;
+                    return true;
                 }
 
-                totalOperations += count;
+                totalOperations += MaxIndex - _Position;
 
-                _Position += count;
+                _Position = MaxIndex;
 
-                return true;
+                return false;
             }
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
             public bool TryMoveBack()
             {
-                if (_Position == 0) return false;
+                if (_Position != 0) 
+                {
+                    _Position--;
 
-                _Position--;
+                    return true;
+                }
 
-                return true;
+                return false;                
             }
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
             public bool TryMoveBack(int count, ref int totalOperations)
             {
-                if (_Position - count < 0)
+                if (_Position - count >= 0)
                 {
-                    totalOperations += _Position;
+                    totalOperations += count;
 
-                    _Position = 0;
+                    _Position -= count;
 
-                    return false;
+                    return true;
                 }
 
-                totalOperations += count;
+                totalOperations += _Position;
 
-                _Position -= count;
+                _Position = 0;
 
-                return true;
+                return false;
             }
 
             /// <inheritdoc/>
@@ -175,22 +181,27 @@ switch (mode)
     case OverflowMode.UshortWithNoOverflow:
     case OverflowMode.ByteWithNoOverflow:
 #>
-                if (*current == <#=cellType#>.MaxValue) return false;
+                if (*current != <#=cellType#>.MaxValue)
+                {
+                    *current = unchecked((<#=cellType#>)(*current + 1));
 
-                *current = unchecked((<#=cellType#>)(*current + 1));
+                    return true;
+                }
+                
+                return false;
 <#
         break;
     case OverflowMode.UshortWithOverflow:
     case OverflowMode.ByteWithOverflow:
 #>
                 *current = unchecked((<#=cellType#>)(*current + 1));
+
+                return true;
 <# 
         break;
     default: throw new ArgumentException($"Invalid overflow mode: {mode}", nameof(mode));
 }
 #>
-
-                return true;
             }
 
             /// <inheritdoc/>
@@ -206,31 +217,35 @@ switch (mode)
     case OverflowMode.UshortWithNoOverflow:
     case OverflowMode.ByteWithNoOverflow:
 #>
-                if (*current + count > <#=cellType#>.MaxValue)
+                if (*current + count <= <#=cellType#>.MaxValue)
                 {
-                    totalOperations += <#=cellType#>.MaxValue - *current;
+                    *current = unchecked((<#=cellType#>)(*current + count));
 
-                    *current = <#=cellType#>.MaxValue;
+                    totalOperations += count;
 
-                    return false;
+                    return true;
                 }
 
-                *current = unchecked((<#=cellType#>)(*current + count));
+                totalOperations += <#=cellType#>.MaxValue - *current;
+
+                *current = <#=cellType#>.MaxValue;
+
+                return false;
 <#
         break;
     case OverflowMode.UshortWithOverflow:
     case OverflowMode.ByteWithOverflow:
 #>
                 *current = unchecked((<#=cellType#>)(*current + count));
+
+                totalOperations += count;
+
+                return true;
 <# 
         break;
     default: throw new ArgumentException($"Invalid overflow mode: {mode}", nameof(mode));
 }
 #>
-
-                totalOperations += count;
-
-                return true;
             }
 
             /// <inheritdoc/>
@@ -246,22 +261,27 @@ switch (mode)
     case OverflowMode.UshortWithNoOverflow:
     case OverflowMode.ByteWithNoOverflow:
 #>
-                if (*current == 0) return false;
+                if (*current != 0)
+                {
+                    *current = (ushort)(*current - 1);
 
-                *current = (ushort)(*current - 1);
+                    return true;
+                }
+
+                return false;
 <#
         break;
     case OverflowMode.UshortWithOverflow:
     case OverflowMode.ByteWithOverflow:
 #>
                 *current = unchecked((<#=cellType#>)(*current - 1));
+
+                return true;
 <#
         break;
     default: throw new ArgumentException($"Invalid overflow mode: {mode}", nameof(mode));
 }
 #>
-
-                return true;
             }
 
             /// <inheritdoc/>
@@ -277,31 +297,35 @@ switch (mode)
     case OverflowMode.UshortWithNoOverflow:
     case OverflowMode.ByteWithNoOverflow:
 #>
-                if (*current < count)
+                if (*current >= count)
                 {
-                    totalOperations += *current;
+                    *current = (ushort)(*current - count);
 
-                    *current = 0;
+                    totalOperations += count;
 
-                    return false;
+                    return true;
                 }
 
-                *current = (ushort)(*current - count);
+                totalOperations += *current;
+
+                *current = 0;
+
+                return false;
 <#
         break;
     case OverflowMode.UshortWithOverflow:
     case OverflowMode.ByteWithOverflow:
 #>
                 *current = unchecked((<#=cellType#>)(*current - count));
+
+                totalOperations += count;
+
+                return true;
 <#
         break;
     default: throw new ArgumentException($"Invalid overflow mode: {mode}", nameof(mode));
 }
 #>
-
-                totalOperations += count;
-
-                return true;
             }
 
             /// <inheritdoc/>
@@ -318,25 +342,32 @@ switch (mode)
     case OverflowMode.UshortWithOverflow:
 #>
                 *current = c;
+
+                return true;
 <#
         break;
     case OverflowMode.ByteWithNoOverflow:
 #>
-                if (c > byte.MaxValue) return false;
+                if (c <= byte.MaxValue)
+                {
+                    *current = c;
 
-                *current = c;
+                    return true;
+                }
+
+                return false;
 <#
         break;
     case OverflowMode.ByteWithOverflow:
 #>
                 *current = unchecked((byte)c);
+
+                return true;
 <#
         break;
     default: throw new ArgumentException($"Invalid overflow mode: {mode}", nameof(mode));
 }
 #>
-
-                return true;
             }
 
             /// <inheritdoc/>
